Exam-Sample/s11.txt
خب بخش دوم سوال یازده
    int s = 40;
    int *ps = &s;
    // ++(*ps)
    cout << ++(*ps);
اگر دقت کنید * پشت اسمش داره اشاره میکنه که متغیر از نوع پوینتره
پس وقتی داریم یکی بهش اضافه میکنیم در واقع داریم به عدد داخل متغییر s یکی اضاف میکنیم

 
41

اما در خط بعدی داریم
    // ++(ps)
    cout << &s << endl;
    cout << ps << endl;
    cout << ++(ps);

اینجا داره 4 عدد به ادرس حافظه اضافه میشه چون پوینتر نیست و درواقع داره با ادرس سر و کله میزنه نه مقداری که داخل s هست این درواقع همون ادرس s عه

خروجی اش
0x5c295ffe84
0x5c295ffe84
0x5c295ffe88

❗️ این خطیه که به مشکل میخوره
    const int k = 88;
    int *pk = &k;
    // ++(*pk)
    cout << ++(*pk);
چرا ؟ چون مقدار k کانستنه
و غیرقابل تغییره
 output
ex6.cpp:17:15: error: invalid conversion from 'const int*' to 'int*' [-fpermissive]
   17 |     int *pk = &k;
      |               ^~
      |               |
      |               const int* 
خط بعدی هم موردی نداره چون داره با ادرس سر و کله میزنه نه مقداری که توشه
    // ++(ps)
    cout << &k << endl;
    cout << pk << endl;
    cout << ++(pk);
خروجیش
0x20ec5ffc84
0x20ec5ffc84
0x20ec5ffc88